--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "busboy-body-parser": "^0.3.2",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -49,6 +50,6 @@
     "prettier": "^2.7.1"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^18"
   }
 }
