--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body": "^5.1.0",
     "body-parser": "^1.20.2",
     "busboy-body-parser": "^0.3.2",
     "compression": "^1.7.4",
@@ -28,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "parse": "^4.2.0",
     "pug": "^3.0.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.5",
@@ -48,7 +50,6 @@
     "ndb": "^1.1.5",
     "prettier": "^2.7.1"
   },
-  
   "engines": {
     "node": "14.17.0"
   }
